# Health_analysis_project

./: .gitignore  LR.pkl  app.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml  secrets.toml
modules/: benefit_analysis.py  book_fe.py  bookclsfr.py  coher.py  coping_mech.py  disorder_analysis.py  domain_analysis.py  educational_value.py  emotion_rep_inc.py  grammarcheck.py  new_extract_sentences.py  readability_check.py  rhetorical_devices.py  text_statistics.py  vocab.py
spacy-3.8.2.dist-info/: RECORD
utils/: design.py  functions_decor.py  logger.py  session_state.py  ui.py
vectorstores/Darkness_Visible__A_Memoir_of_Madness_-_William_Styron (1)/: index.faiss  index.pkl
vectorstores/Devil_in_the_Details_-_Jennifer_Traig/: index.faiss  index.pkl
vectorstores/Down_Came_the_Rain_-_Brooke_Shields/: index.faiss  index.pkl
vectorstores/Fast_Girl_-_Suzy_Favor_Hamilton/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_Girl_Interrupted_-_Susanna_Kaysen/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_I_havent_been_entirely_honest_with_you_-_Miranda_Hart/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_Kurt_Cobain_-_Christopher_Sandford/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_Mad_girl_-_Bryony_Gordon/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_Meet_Ella_the_dog_who_saved_my_life_-_James_Middleton/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_The_Comfort_Book_-__Matt_Haig/: index.faiss  index.pkl
vectorstores/_OceanofPDF.com_the_dark_side_of_the_mind_-_kerry_daynes/: index.faiss  (+1 more)
